# LLMsOrchestration

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SUBMISSION_FORM.md  extract_pdf_text.py  extracted_text.txt  project_rules.md  pyproject.toml  requirements.txt  review_report.md  run_detector.py
.agent/workflows/: commit_on_milestone.md
.github/workflows/: ci.yml
DEEPFAKE/: README.md  generate_dummy_data.py  run_assessment.py  run_detector.py
DEEPFAKE/detector/: video_utils.py
DEEPFAKE/generator/: face_swap.py
DEEPFAKE/tests/: test_detector.py  test_generator.py
detector/: agent.py  prompts.py
docs/: ARCHITECTURE.md  COSTS.md  PRD.md  PROMPT_BOOK.md
docs/architecture/: agent_roles.md  workflow.md
generator/: face_swap.py
notebooks/: analysis.ipynb
scripts/: generate_dummy_data.py  run_assessment.py
src/: hello.py  main.py
src/agents/: architect.py  base_agent.py  code_quality.py  developer.py  qa.py  research.py  self_assessment.py
src/deepfake_platform/: __init__.py
src/deepfake_platform/detector/: __init__.py  agent.py  prompts.py  video_utils.py
src/deepfake_platform/generator/: __init__.py  face_swap.py
src/llms_orchestration/: __init__.py  main.py
src/llms_orchestration/agents/: architect.py  base_agent.py  code_quality.py  developer.py  qa.py  research.py  self_assessment.py
src/llms_orchestration/config/: prompts.py  settings.py
tests/: conftest.py  test_cli_workflow.py  test_detector.py  test_face_swap.py  test_integration_detector.py  test_orchestration.py  test_video_utils.py
